Add sorting styles

--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
     <title>Alecto</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/js/main.js">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+    <link rel="stylesheet" href="assets/css/fontello.css">
 </head>
 <body>
     <header>
-        <div class="container menu">
-            <h2><img src="src/img/ligo.png" alt="logo"></h2>
+        <div class="container top">
+            <h1><img src="src/img/ligo.png" alt="logo"></h1>
             <nav>
                 <ul class="menu">
-                    <li><a class="click" href="#">Home</a></li>
-                    <li><a class="click" href="#">About</a></li>
-                    <li><a class="click" href="#">Work</a></li>
-                    <li><a class="click" href="#">Services</a></li>
-                    <li><a class="click" href="#">Blog</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#"><i class="icon-search"></i></a></li>
                 </ul>
             </nav>
         </div>
-
         <div class="container headline">
-            <h1>Alecto is simple PSD Template</h1>
-            <div class="arrow-right"></div>
-            <div class="arrow-left"></div>
+            <h2 class="center"><strong>Alecto</strong> is simple PSD Template</h2>
+            <a href="#"><i class="icon-right-open-big"></i></a>
+            <a href="#"><i class="icon-left-open-big"></i></a>
             <h3>Nam varius accumsan elementum aliquam</h3>
             <div class="link feature center">
                 <a href="#">Learn more</a>
             </div>
-
             <ul class="slider">
                 <li></li>
                 <li></li>
@@ -39,14 +39,9 @@
                 <li></li>
                 <li></li>
             </ul>
-
-
-            <div class="arrow-center"></div>
+            <a href="#"><i class="icon-down-open-big"></i></a>
         </div>
-
-
     </header>
-
     <section class="about-us">
         <div class="container">
             <h2 class="center">About us</h2>
@@ -59,65 +54,64 @@
                     <span class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
                         scelerisque.</span>
                 </li>
-
                 <li>
                     <div class="circle"></div>
                     <span class="name">Lorem ipsum</span>
                     <span class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
                         scelerisque.</span>
                 </li>
-
                 <li>
                     <div class="circle"></div>
                     <span class="name">Lorem ipsum</span>
                     <span class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
                         scelerisque.</span>
                 </li>
-
                 <li>
                     <div class="circle"></div>
                     <span class="name">Lorem ipsum</span>
                     <span class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit
                         scelerisque.</span>
                 </li>
-
             </ul>
-
             <div class="link center">
                 <a href="#">Learn more</a>
             </div>
-
         </div>
     </section>
-
     <section class="lorem-grey">
         <div class="container">
             <div class="div right">
                 <h2>Lorem ipsum</h2>
-                <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. </span>
+                <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum
+                    augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis.
+                    Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non,
+                    blandit quis sapien. </span>
                 <div class="link">
                     <a href="#">Learn more</a>
                 </div>
             </div>
         </div>
     </section>
-
     <section class="dolor-sit">
         <div class="container">
             <div class="div">
                 <h2>Dolor sit amet</h2>
-                <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. </span>
+                <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum
+                    augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis.
+                    Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non,
+                    blandit quis sapien. </span>
                 <div class="link">
                     <a href="#">Learn more</a>
                 </div>
             </div>
         </div>
     </section>
-
     <section class="founder-info">
         <div class="container">
             <img class="center" src="assets/img/Photo_Adam_Czajkowski.png" alt="Adam">
-            <h2>Alecto lorem ipsum dolor sit amet, consectetur adipiscing elit. </h2>
+            <a href="#"><i class="icon-right-open-big"></i></a>
+            <a href="#"><i class="icon-left-open-big"></i></a>
+            <h2><span>Alecto</span> lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
             <h3>Adam Czajkowski, CEO&Founder at symu.co</h3>
             <ul class="slider">
                 <li></li>
@@ -128,13 +122,11 @@
             </ul>
         </div>
     </section>
-
     <section class="our-services">
         <div class="container">
             <h2 class="center">Our Services</h2>
             <div class="border"></div>
             <h3>Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
-
             <ul>
                 <li>
                     <div class="service-logo bag"></div>
@@ -145,7 +137,6 @@
                         </span>
                     </div>
                 </li>
-
                 <li>
                     <div class="service-logo pen"></div>
                     <div class="service-description">
@@ -156,9 +147,7 @@
                     </div>
                 </li>
             </ul>
-
             <ul>
-
                 <li>
                     <div class="service-logo square"></div>
                     <div class="service-description">
@@ -168,7 +157,6 @@
                         </span>
                     </div>
                 </li>
-
                 <li>
                     <div class="service-logo rocket"></div>
                     <div class="service-description">
@@ -178,19 +166,13 @@
                         </span>
                     </div>
                 </li>
-
             </ul>
-
         </div>
     </section>
-
     <section class="team">
-        <div class="container width">
-
-            <h2>Meet our team</h2>
+            <h2 class="center">Meet our team</h2>
             <div class="border"></div>
             <h3 class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
-
             <ul class="team-photo">
                 <li>
                     <span>John Doe</span>
@@ -222,83 +204,83 @@
                  <li>
                     <span>John Doe</span>
                 </li>
-
             </ul>
-        </div>
     </section>
-
     <section class="pricing">
         <div class="container">
             <h2 class="center">Pricing</h2>
             <div class="border"></div>
             <h3 class="description center">Nam varius accumsan elementum. Aliquam fermentum eros in suscipit scelerisque.</h3>
-
             <ul class="price">
                 <li>
                     <h2>$29</h2>
                     <span class="description">Lorem ipsum license</span>
                     <div class="line"></div>
-                    <span class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
+                    <span class="description text">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed
+                        interdum labortis Est nisi
                         efficitur lactus</span>
                     <div class="purchase">
                         <span>p u r c h a s e</span>
+                        <a href="#"><i class="icon-basket"></i></a>
                     </div>
                 </li>
                 <li>
                     <h2>$39</h2>
                     <span class="description">Lorem ipsum license</span>
                     <div class="line"></div>
-                    <span class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
-                        efficitur lactus</span>
+                    <span class="description text">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed
+                        interdum labortis Est nisi efficitur lactus</span>
                     <div class="purchase">
                         <span>p u r c h a s e</span>
+                        <a href="#"><i class="icon-basket"></i></a>
                     </div>
                 </li>
                 <li>
                     <h2>$49</h2>
                     <span class="description">Lorem ipsum license</span>
                     <div class="line"></div>
-                    <span class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
-                        efficitur lactus</span>
+                    <span class="description text">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed
+                        interdum labortis Est nisi efficitur lactus</span>
                     <div class="purchase">
                         <span>p u r c h a s e</span>
+                        <a href="#"><i class="icon-basket"></i></a>
                     </div>
                 </li>
                 <li>
                     <h2>$109</h2>
                     <span class="description">Lorem ipsum license</span>
                     <div class="line"></div>
-                    <span class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed interdum labortis Est nisi
-                        efficitur lactus</span>
+                    <span class="description text">Lorem ipsum dolor sit amet consectetur adipiscing elit Ante sed
+                        interdum labortis Est nisi efficitur lactus</span>
                     <div class="purchase">
                         <span>p u r c h a s e</span>
+                        <a href="#"><i class="icon-basket"></i></a>
                     </div>
                 </li>
             </ul>
-
         </div>
     </section>
-
     <section class="map">
         <div class="container">
             <div class="div">
                 <h2>Dolor sit amet</h2>
-                <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non, blandit quis sapien. </span>
+                <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum
+                    augue sed est porttitor, ac blandit nisl posuere. Pellentesque hendrerit suscipit mi eu lobortis.
+                    Curabitur consectetur enim id elementum accumsan. Quisque metus purus, iaculis id tincidunt non,
+                    blandit quis sapien. </span>
                 <div class="link">
                     <a href="#">Learn more</a>
                 </div>
             </div>
-            <img src="assets/img/map.png" alt="map">
         </div>
+        <img src="assets/img/map.png" alt="map">
     </section>
-
     <section class="try-template">
-        <h2>Try our PSD template on symu.co</h2>
+        <h2>Try our <strong>PSD template</strong> on symu.co</h2>
         <div class="link">
             <a href="#">symu.co/freebies</a>
         </div>
     </section>
-
     <footer>
         <div class="container">
             <div class="rights">
@@ -307,17 +289,14 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li><a class="click" href="#">Home</a></li>
-                    <li><a class="click" href="#">About</a></li>
-                    <li><a class="click" href="#">Work</a></li>
-                    <li><a class="click" href="#">Services</a></li>
-                    <li><a class="click" href="#">Blog</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Blog</a></li>
                 </ul>
             </nav>
-
         </div>
     </footer>
-
-
 </body>
 </html>
